# staticdb

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
staticdb/: address.hpp  bit_sink.hpp  bit_source.hpp  byte.hpp  copy.hpp  execution.hpp  expressions.hpp  layout.hpp  multiply.hpp  plan.hpp  sqlite.hpp  staticdb.hpp  storage.hpp  types.hpp  values.hpp
tests/: CMakeLists.txt  bit_sink.cpp  get.cpp  layout.cpp  plan.cpp  sqlite.cpp  staticdb.cpp
